--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,8 @@
 body {
   font-family: "Open Sans", sans-serif;
   background-color: #37517e;
+  height: 100%;
+  margin: 0;
 }
 
 a {
@@ -1416,6 +1418,7 @@ section {
 #footer {
   font-size: 14px;
   background: #1e2c46;
+  padding: 20px 0;
 }
 #footer .footer-newsletter {
   padding: 50px 0;
