--- a/resources/css/regis.css
+++ b/resources/css/regis.css
@@ -35,24 +35,25 @@
     outline: none; }
   
   .wrapper {
-    min-height: 100vh;
+    /* min-height: 100vh; */
     display: flex;
     align-items: center;
     justify-content: center;
     background: #202133;
-  margin-top: 70px; }
+
+   }
   
   .inner {
     position: relative;
     width: 435px;
     margin-left:830px; 
-    margin-top: -550px;}
+    margin-top: 0px;}
   
   form {
     width: 100%;
     position: relative;
     z-index: 9;
-    padding: 77px 61px 66px;
+    /* padding: 77px 61px 66px; */
     background-color: rgba(36, 36, 137, 0.55);
     border: 20px solid #252540; 
     border-style: ridge; 
